fix: move watermark behind everything (#202)

--- a/src/components/watermark/_watermark.scss
+++ b/src/components/watermark/_watermark.scss
@@ -1,7 +1,6 @@
 .player .watermark {
   position: absolute;
   padding: 5px;
-  z-index: 5;
   transition: visibility 0s 1s, opacity 1s linear, transform ease-out 100ms;
   &.hide-watermark {
     visibility: hidden;
